add code and paper links

--- a/index.html
+++ b/index.html
@@ -64,12 +64,14 @@ body {
   <p align="justify">We present <em>MoRig</em>, a method that automatically rigs character meshes driven by single-view point cloud streams capturing the motion of performing characters. Our method is also able to animate the 3D meshes according to the captured point cloud motion.MoRig's neural network encodes motion cues from the point clouds into features that are informative about the articulated parts of the performing character. These motion-aware features guide the inference of an appropriate skeletal rig for the input mesh, which is then animated based on the point cloud motion. Our method can rig and animate diverse characters, including humanoids, quadrupeds, and toys with varying articulation. It accounts for occluded regions in the  point clouds and mismatches in the part proportions between the input mesh and captured character. Compared to other rigging approaches that ignore motion cues, MoRig produces more accurate rigs,  well-suited for re-targeting motion from captured characters. </p>
   
   <h2>Paper</h2>
-  Coming soon!
-  <!-- <a href="https://people.cs.umass.edu/~zhanxu/papers/RigNet.pdf">RigNet.pdf</a>, 11.6MB<br> -->
+  <p><a href="https://arxiv.org/abs/2210.09463"><img src="paper_thumb.png" alt="" width="200" height="260" style="float:left"></a></p>
+  <br style="clear:both" />
 
   <br> 
   <h2>Source Code &amp; Data</h2>
-  Coming soon!
+  <p><a href="https://github.com/zhan-xu/MoRig"><img src="GitHub-logo.png" alt="" width="200" style="float:left"></a></p>
+  <br style="clear:both" />
+
   
   <!-- <h2>Poster</h2>
   <p><a href="https://people.cs.umass.edu/~zhanxu/projects/APES/POSTER_APES.pdf"><img src="poster_thumb.png" alt="" width="600" height="300" style="float:left"></a></p> -->
