add siggraph video

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>MoRig: Motion-Aware Rigging of Character Meshes from Point Clouds</title>
+<title>Morig: Motion-Aware Rigging of Character Meshes from Point Clouds</title>
 
 <link media="all" href="./style.css" type="text/css" rel="stylesheet">
 <style type="text/css" media="all">
@@ -44,7 +44,7 @@ body {
 </head>
 <body>
 <div id="content">
-  <h1 align="center" class="sammy-nowrap-1">MoRig: Motion-Aware Rigging of Character Meshes from Point Clouds</h1>
+  <h1 align="center" class="sammy-nowrap-1">Morig: Motion-Aware Rigging of Character Meshes from Point Clouds</h1>
   <div align="center">
   <ul id="people" align="center">
     <a href="https://people.cs.umass.edu/~zhanxu/">Zhan Xu</a> <a>, </a>
@@ -80,9 +80,10 @@ body {
   <h2>Supplementary Video</h2>
   <iframe width="640" height="360" src="https://www.youtube.com/embed/sPxfnQ8j07Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   
-   
-  <!-- <h2>30s fast-forward demo for SIGGRAPH 2020</h2>
- <iframe width="640" height="360" src="https://www.youtube.com/embed/LL2KdYxr26c?list=PL1U-zmoZcBllPJ8yG4vDGc_Cjvshero22" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+  <br>
+  <h2>Presentation for SIGGRAPH AISA 2022</h2>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/xNcw5UtpNrc" title="Morig: Motion-aware rigging of character meshes from point clouds (SIGGRAPH ASIA 2022)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
   
 
   <br>
